--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
 	"name": "@mpt/eslint-rules",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "Eslint rules I use for personal projects",
 	"repository": "https://github.com/mxjp/eslint-rules",
 	"type": "module",
-	"peerDependencies": {
+	"dependencies": {
 		"@typescript-eslint/eslint-plugin": "^4.22.0",
 		"@typescript-eslint/parser": "^4.22.0",
 		"eslint": "^7.25.0",
-		"eslint-plugin-import": "^2.22.1",
-		"typescript": "^4.2.0"
+		"eslint-plugin-import": "^2.22.1"
 	},
 	"devDependencies": {
 		"@types/node": "^14.14.41"
